@@ -3,6 +3,7 @@
 = 6.6.0 - xxxx-xx-xx =
 * Fix - When using the checkout block to pay for renewal orders, ensure the order's cart hash is updated to make sure the existing order can be used.
 * Fix - Prevents a PHP fatal error that occurs when the cart contains a renewal order item that no longer exists.
+* Fix - When HPOS is enabled and data compatibilty mode is turned on, make sure subscription date changes made to postmeta are synced to orders_meta table.
 
 = 6.5.0 - 2023-11-09 =
 * Add - When a customer toggles automatic renewals on or off via their My Account page, add a note to the subscription to record that event.
